add products card

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="flex bg-yellow-400">
+<div class="flex h-screen bg-yellow-400">
   <shared-menu-sidebar></shared-menu-sidebar>
   
-  <div class="w-full p-6">
-    <router-outlet />
+  <div class="flex-1 overflow-y-auto p-6">
+    <app-products></app-products>
   </div>
 </div>
