--- a/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
+++ b/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
@@ -1,5 +1,5 @@
-<div class="min-h-screen bg-gray-50 p-6 shadow-lg">
-    <div class="flex w-64 flex-col">
+<div class="min-h-screen bg-gray-50 p-6 shadow-lg h-full">
+    <div class="flex w-52 flex-col justify-between h-full">
         <div class="flex flex-1 flex-col gap-y-8">
             <h3 class="font-medium text-4xl text-center">Negocio</h3>
 
@@ -21,14 +21,12 @@
             </div>
         </div>
 
-        <div class="fixed w-64 bottom-4">
-            <button class="transition ease-in-out delay-150 flex justify-center items-center w-full py-2.5 rounded-full bg-yellow-500 text-white gap-x-2 font-semibold
-            hover:-translate-y-1 hover:scale-110 duration-300">
-                <i class="fa-solid fa-cart-shopping text-xl"></i>
-                <p class="rounded-full bg-red-600 h-6 w-6 p-0.5 flex justify-center items-center"><span class="text-center">99</span></p>
-                <p>Artículos</p>
-                <p>$1080.99</p>
-            </button>
-        </div>
+        <button class="transition ease-in-out delay-150 flex justify-center items-center w-full py-2.5 rounded-full bg-yellow-500 text-white gap-x-1.5 font-semibold
+        hover:-translate-y-1 hover:scale-110 duration-300">
+            <i class="fa-solid fa-cart-shopping text-xl"></i>
+            <p class="rounded-full bg-red-600 h-6 w-6 p-0.5 flex justify-center items-center"><span class="text-center">99</span></p>
+            <p>Artículos</p>
+            <p>$1080.99</p>
+        </button>
     </div>
 </div>
