add cart component

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="flex h-screen bg-yellow-400">
-  <shared-menu-sidebar></shared-menu-sidebar>
+  <shared-menu-sidebar (onShowCart)="openSidebar('Cart')"></shared-menu-sidebar>
   
   <div class="flex-1 overflow-y-auto p-6">
+    <app-cart *ngIf="sidebarType == 'Cart'"></app-cart>
     <app-products></app-products>
   </div>
 </div>
