--- a/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
+++ b/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
@@ -22,7 +22,8 @@
         </div>
 
         <button class="transition ease-in-out delay-150 flex justify-center items-center w-full py-2.5 rounded-full bg-yellow-500 text-white gap-x-1.5 font-semibold
-        hover:-translate-y-1 hover:scale-110 duration-300">
+        hover:-translate-y-1 hover:scale-110 duration-300"
+        (click)="showCart()">
             <i class="fa-solid fa-cart-shopping text-xl"></i>
             <p class="rounded-full bg-red-600 h-6 w-6 p-0.5 flex justify-center items-center"><span class="text-center">99</span></p>
             <p>Artículos</p>
