--- a/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
+++ b/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
@@ -3,7 +3,8 @@
         <div class="flex flex-1 flex-col gap-y-8">
             <h3 class="font-medium text-4xl text-center">Negocio</h3>
 
-            <button class="flex justify-center items-center py-1.5 rounded-lg border border-gray-500 bg-gray-100 text-gray-500 hover:text-white hover:bg-yellow-500">
+            <button class="flex justify-center items-center py-1.5 rounded-lg border border-gray-500 bg-gray-100 text-gray-500 hover:text-white hover:bg-yellow-500"
+            (click)="showSchedule()">
                 <i class="fa-solid fa-clock"></i>
                 <p class="ml-2">Horarios de servicio</p>
             </button>
