--- a/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
+++ b/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
@@ -15,9 +15,11 @@
                     <p class="ml-3">Menú</p>
                 </div>
                 <div class="flex flex-col justify-center text-lg font-medium">
-                    <button class="flex justify-center items-center py-1.5 rounded-lg hover:bg-yellow-500 hover:text-white">UNO</button>
-                    <button class="flex justify-center items-center py-1.5 rounded-lg hover:bg-yellow-500 hover:text-white">DOS</button>
-                    <button class="flex justify-center items-center py-1.5 rounded-lg hover:bg-yellow-500 hover:text-white">THREE</button>
+                    <button class="flex justify-center items-center py-1.5 rounded-lg hover:bg-yellow-500 hover:text-white"
+                    *ngFor="let item of categories">
+                    <i [class]="'fa-solid ' + item.icon"></i>
+                    <p class="ml-3">{{item.name}}</p>
+                    </button>
                 </div>
             </div>
         </div>
