--- a/Frontend/src/app/modules/products/components/product-sidebar/product-sidebar.component.html
+++ b/Frontend/src/app/modules/products/components/product-sidebar/product-sidebar.component.html
@@ -6,7 +6,7 @@
             <div class="flex flex-col justify-between p-6 text-white break-words h-full">
                 <div class="flex flex-col">
                     <div class="flex items-center justify-between text-yellow-500">
-                        <h3 class="text-2xl font-semibold">Paste Pompompurin</h3>
+                        <h3 class="text-2xl font-semibold">{{ product.name }}</h3>
 
                         <button class="text-3xl" (click)="closeSidebar()">
                             <i class="fa-solid fa-xmark"></i>
@@ -14,30 +14,31 @@
                     </div>
 
                     <div class="mt-10 flex flex-col items-center justify-items-center w-full gap-y-14">
-                        <img class="w-36 h-36 rounded-md" src="https://cdn.shopify.com/s/files/1/0683/0194/7201/files/GEe2jh9bgAAlNKX_95f7000e-8890-400c-8933-959fee5f6ed2.jpg?v=1711343302" />
+                        <img class="w-36 h-36 rounded-md" [src]="product.image | imagePipe" />
 
                         <p class="text-center">
-                            Masa amarilla sabor a flan delicioso, rebota cuando lo lanzas
+                            {{ product.description }}
                         </p>
 
                         <div class="flex w-full justify-center items-center gap-x-4">
                             <p>Cantidad: </p>
-                            <button
-                                class="w-10 h-10 rounded-full bg-transparent border border-white hover:bg-white hover:text-black flex justify-center items-center">
+                            <button class="w-10 h-10 rounded-full bg-transparent border border-white hover:bg-white hover:text-black flex justify-center items-center"
+                                (click)="updateQtyProduct(false)">
                                 <i class="fa-solid fa-minus"></i>
                             </button>
-                            <p class="text-2xl font-semibold">1</p>
-                            <button
-                                class="w-10 h-10 rounded-full bg-transparent border border-white hover:bg-white hover:text-black flex justify-center items-center">
+                            <p class="text-2xl font-semibold">{{ qtyProduct }}</p>
+                            <button class="w-10 h-10 rounded-full bg-transparent border border-white hover:bg-white hover:text-black flex justify-center items-center"
+                                (click)="updateQtyProduct(true)">
                                 <i class="fa-solid fa-plus"></i>
                             </button>
                         </div>
                     </div>
                 </div>
 
-                <button class="bg-yellow-500 rounded-md py-2.5 flex justify-center items-center text-black hover:bg-yellow-400">
+                <button class="bg-yellow-500 rounded-md py-2.5 flex justify-center items-center text-black hover:bg-yellow-400"
+                    (click)="addProduct()">
                     <i class="fa-solid fa-cart-plus text-xl"></i>
-                    <p class="ml-3">Añadir 99 artículos por $1827.00</p>
+                    <p class="ml-3">Añadir {{ qtyProduct }} artículos por {{ (qtyProduct * product.price) | currency }}</p>
                 </button>
             </div>
         </div>
