--- a/Frontend/src/app/modules/cart/pages/order-details-page/order-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/order-details-page/order-details-page.component.html
@@ -41,7 +41,7 @@
 
         <div class="grid grid-cols-2 gap-y-1">
             <label>Total del pedido:</label>
-           <label>$15.00</label>
+           <label>{{ cartSubtotal | currency }}</label>
            <label>Costo del envío:</label>
            <label>+ $0.00</label>
            <label>Propina:</label>
