--- a/Frontend/src/app/modules/products/components/product-card/product-card.component.html
+++ b/Frontend/src/app/modules/products/components/product-card/product-card.component.html
@@ -3,7 +3,7 @@
     <div class="flex flex-col p-3.5 gap-y-2">
         <h3 class="font-semibold text-xl break-all text-center">{{ product.name }}</h3>
         <p class="text-center">{{ product.description }}</p>
-        <div class="flex flex-wrap justify-center items-center md:flex-auto md:justify-between">
+        <div class="flex flex-wrap mt-2 justify-center items-center md:flex-auto md:justify-between">
             <p class="text-2xl font-bold text-black">{{ product.price | currency }}</p>
             <button class="flex items-center py-1.5 px-2 rounded-lg bg-emerald-700 text-white hover:bg-emerald-900"
                 (click)="openSidebar()">
