--- a/Frontend/src/app/modules/schedule/schedule.component.html
+++ b/Frontend/src/app/modules/schedule/schedule.component.html
@@ -13,7 +13,7 @@
         <div class="p-10 border-b border-gray-300">
             <div class="flex flex-col gap-y-4 w-full">
 
-                <div *ngFor="let item of schedules" class="p-4 bg-yellow-100 border border-yellow-500 rounded-xl">
+                <div *ngFor="let item of schedules | sortPipe" class="p-4 bg-yellow-100 border border-yellow-500 rounded-xl">
                     <div class="flex gap-x-6 items-center">
                         <p class="text-yellow-500 text-xl">
                             <i class="fa-solid fa-clock"></i>
