--- a/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
@@ -19,11 +19,11 @@
         <h4 class="text-center font-semibold text-lg">Tipo de entrega</h4>
         <div class="flex justify-between items-center">
             <label>Envio a domicilio:</label>
-            <input type="radio" class="h-5 w-5" />
+            <input type="radio" class="h-5 w-5" name="deliveryType" />
         </div>
         <div class="flex justify-between items-center">
             <label>Pasar a recoger:</label>
-            <input type="radio" class="h-5 w-5 checked:border-yellow-200" />
+            <input type="radio" class="h-5 w-5 checked:border-yellow-200" name="deliveryType" />
         </div>
     </div>
 
