--- a/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col w-full">
+<form class="flex flex-col w-full" [formGroup]="form">
     <h3 class="text-center text-white font-bold text-xl">Completa los datos</h3>
 
     <div class="flex flex-col mt-4 p-4 bg-yellow-50 rounded-md gap-y-3">
@@ -6,12 +6,14 @@
 
         <div class="flex flex-col gap-y-0.5">
             <label>Nombre:</label>
-            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" />
+            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
+                formControlName="clientName" required />
         </div>
 
         <div class="flex flex-col gap-y-0.5">
             <label>Celular:</label>
-            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" />
+            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
+                formControlName="clientTelephone" required />
         </div>
     </div>
 
@@ -19,44 +21,64 @@
         <h4 class="text-center font-semibold text-lg">Tipo de entrega</h4>
         <div class="flex justify-between items-center">
             <label>Envio a domicilio:</label>
-            <input type="radio" class="h-5 w-5" name="deliveryType" />
+            <input type="radio" class="h-5 w-5" name="deliveryType" value="domicilio" 
+                formControlName="deliveryType" />
         </div>
         <div class="flex justify-between items-center">
             <label>Pasar a recoger:</label>
-            <input type="radio" class="h-5 w-5 checked:border-yellow-200" name="deliveryType" />
+            <input type="radio" class="h-5 w-5 checked:border-yellow-200" name="deliveryType" value="recoger" 
+                formControlName="deliveryType" />
         </div>
     </div>
 
-    <div class="flex flex-col mt-4 p-4 bg-yellow-50 rounded-md gap-y-3">
+    <div class="flex flex-col mt-4 p-4 bg-yellow-50 rounded-md gap-y-3" *ngIf="form.get('deliveryType')?.value === 'domicilio'">
         <h4 class="text-center font-semibold text-lg">Dirección de entrega</h4>
 
         <p class="text-yellow-400 text-center -mt-4 font-semibold">Costo de envío: $0.00</p>
 
         <div class="flex flex-col gap-y-0.5">
             <label>Zona, colonia o super manzana:</label>
-            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" />
+            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none"
+                formControlName="neighborhood" required />
         </div>
 
         <div class="flex flex-col gap-y-0.5">
             <label>Calle o mz:</label>
-            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" />
+            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none"
+                formControlName="street" required />
         </div>
 
         <div class="grid grid-cols-2 justify-between gap-x-2">
             <div class="flex flex-col gap-y-0.5">
                 <label>Número exterior:</label>
-                <input type="number" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" />
+                <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
+                    formControlName="exteriorNumber" required />
             </div>
 
             <div class="flex flex-col gap-y-0.5">
                 <label>Número interior:</label>
-                <input type="number" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" />
+                <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
+                    formControlName="interiorNumber" required />
             </div>
         </div>
 
         <div class="flex flex-col gap-y-0.5">
             <label>Referencias:</label>
-            <textarea type="text" class="rounded-md py-1.5 h-16 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none"></textarea>
+            <textarea type="text" class="rounded-md py-1.5 h-16 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none"
+                formControlName="references">
+            </textarea>
         </div>
     </div>
+</form>
+<div class="flex justify-between w-full mt-8">
+    <button class="bg-gray-500 rounded-md py-2.5 px-4 flex justify-center items-center text-black hover:bg-gray-400"
+        (click)="changePage(false)">
+        <i class="fa-solid fa-chevron-left"></i>
+        <p class="ml-2">Regresar</p>
+    </button>
+    <button class="bg-yellow-500 rounded-md py-2.5 px-4 flex justify-center items-center text-black hover:bg-yellow-400"
+        (click)="changePage(true)">
+        <p class="mr-2">Continuar</p>
+        <i class="fa-solid fa-chevron-right"></i>
+    </button>
 </div>
