--- a/Frontend/src/app/modules/cart/cart.component.html
+++ b/Frontend/src/app/modules/cart/cart.component.html
@@ -6,7 +6,7 @@
             <div class="flex flex-col justify-between p-6 break-words h-full overflow-y-auto">
                 <div class="flex flex-col">
                     <div class="flex justify-between items-center text-yellow-500">
-                        <h3 class="text-2xl font-semibold">Carrito</h3>
+                        <h3 class="text-2xl font-semibold"><i class="fa-solid fa-cart-shopping"></i></h3>
 
                         <button class="text-3xl" (click)="closeSidebar()">
                             <i class="fa-solid fa-xmark"></i>
