--- a/Frontend/src/app/modules/cart/pages/order-details-page/order-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/order-details-page/order-details-page.component.html
@@ -6,23 +6,10 @@
 
         <div class="px-4">
             <div class="grid grid-cols-3 gap-2">
-                <button class="rounded-md bg-transparent border py-0.5 border-yellow-500 text-yellow-500 hover:bg-yellow-500 hover:text-white hover:font-semibold">
-                    $0
-                </button>
-                <button class="rounded-md bg-transparent border py-0.5 border-yellow-500 text-yellow-500 hover:bg-yellow-500 hover:text-white hover:font-semibold">
-                    $10
-                </button>
-                <button class="rounded-md bg-transparent border py-0.5 border-yellow-500 text-yellow-500 hover:bg-yellow-500 hover:text-white hover:font-semibold">
-                    $20
-                </button>
-                <button class="rounded-md bg-transparent border py-0.5 border-yellow-500 text-yellow-500 hover:bg-yellow-500 hover:text-white hover:font-semibold">
-                    $30
-                </button>
-                <button class="rounded-md bg-transparent border py-0.5 border-yellow-500 text-yellow-500 hover:bg-yellow-500 hover:text-white hover:font-semibold">
-                    $40
-                </button>
-                <button class="rounded-md bg-transparent border py-0.5 border-yellow-500 text-yellow-500 hover:bg-yellow-500 hover:text-white hover:font-semibold">
-                    Otro
+                <button *ngFor="let item of tipArray" class="rounded-md bg-transparent border py-0.5"
+                    [class]="item == tipSelected ? 'bg-yellow-500 text-white font-semibold' : 'border-yellow-500 text-yellow-500 hover:bg-yellow-500 hover:text-white hover:font-semibold'"
+                    (click)="selectTip(item)">
+                    {{ item | currency}}
                 </button>
             </div>
         </div>
@@ -30,8 +17,10 @@
 
     <div class="flex flex-col mt-4 p-4 bg-yellow-50 rounded-md gap-y-3">
         <h4 class="text-center font-semibold text-lg">Cupón de descuento</h4>
+
         <div class="flex justify-between items-center">
             <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" />
+            
             <button class="bg-yellow-200 text-white w-auto rounded-md py-1.5 px-4">Validar</button>
         </div>
     </div>
@@ -45,7 +34,12 @@
            <label>Costo del envío:</label>
            <label>+ $0.00</label>
            <label>Propina:</label>
-           <label>+ $0.00</label>
+           <label>+ {{ tipSelected | currency }}</label>
+           <div class="col-span-2">
+            <hr class="border border-black" />
+           </div>
+           <label class="font-semibold">Total</label>
+           <label class="font-semibold">{{ (cartSubtotal + tipSelected ) | currency}}</label>
         </div>
     </div>
 
@@ -56,16 +50,29 @@
 
         <div class="flex justify-between items-center">
             <label>Efectivo:</label>
+
             <input type="radio" class="h-5 w-5" name="paymentMethod"  value="efectivo"
                 formControlName="paymentMethod" />
         </div>
 
-        <input type="text" class="rounded-md w-full py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" />
+        <input type="text" class="rounded-md w-full py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
+            placeholder="¿Con cuánto pagas?"
+            *ngIf="form.get('paymentMethod')?.value === 'efectivo'" />
 
         <div class="flex justify-between items-center">
-            <label>Trasnferencia:</label>
+            <label>Transferencia:</label>
+
             <input type="radio" class="h-5 w-5" value="transferencia" name="paymentMethod" 
                 formControlName="paymentMethod" />
+        </div>
+
+        <div class="flex flex-col items-center gap-y-1" *ngIf="form.get('paymentMethod')?.value === 'transferencia'">
+            <label class="font-bold">Datos de transferencia</label>
+
+            <p><span class="font-semibold">Nombre:</span> Juan Palacios Olivares</p>
+            <p><span class="font-semibold">Tarjeta:</span> 8901 2846 0493 3802</p>
+            <p><span class="font-semibold">Clabe:</span> 9018238499383104993</p>
+            <p><span class="font-semibold">Banco:</span> Banco Azteca</p>
         </div>
     </div>
 
@@ -75,7 +82,7 @@
         <div class="flex flex-col gap-y-0.5">
             <label>Comentarios:</label>
             <textarea type="text" class="rounded-md py-1.5 h-16 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none"
-                formControlName="comentaries"></textarea>
+                formControlName="comentaries" placeholder="Ejemplo: No agregar servilletas, no agregar cubiertos"></textarea>
         </div>
     </div>
 </form>
