--- a/Frontend/src/app/modules/products/components/product-card/product-card.component.html
+++ b/Frontend/src/app/modules/products/components/product-card/product-card.component.html
@@ -5,7 +5,7 @@
         <p class="text-center">{{ product.description }}</p>
         <div class="flex flex-wrap mt-2 justify-center items-center md:flex-auto md:justify-between">
             <p class="text-2xl font-bold text-black">{{ product.price | currency }}</p>
-            <button class="flex items-center py-1.5 px-2 rounded-lg bg-emerald-700 text-white hover:bg-emerald-900"
+            <button class="flex items-center py-1.5 px-2 rounded-lg bg-emerald-700 text-white hover:bg-emerald-900 btn-zoom"
                 (click)="selectedProduct()">
                 <i class="fa-solid fa-cart-plus"></i>
                 <p class="ml-3">Comprar</p>
