--- a/Frontend/src/app/modules/products/components/product-sidebar/product-sidebar.component.html
+++ b/Frontend/src/app/modules/products/components/product-sidebar/product-sidebar.component.html
@@ -20,22 +20,15 @@
                             {{ product.description }}
                         </p>
 
-                        <div class="flex w-full justify-center items-center gap-x-4">
-                            <p>Cantidad: </p>
-                            <button class="w-10 h-10 rounded-full bg-transparent border border-white hover:bg-white hover:text-black flex justify-center items-center"
-                                (click)="updateQtyProduct(false)">
-                                <i class="fa-solid fa-minus"></i>
-                            </button>
-                            <p class="text-2xl font-semibold">{{ qtyProduct }}</p>
-                            <button class="w-10 h-10 rounded-full bg-transparent border border-white hover:bg-white hover:text-black flex justify-center items-center"
-                                (click)="updateQtyProduct(true)">
-                                <i class="fa-solid fa-plus"></i>
-                            </button>
-                        </div>
+                        <shared-quantity-buttons 
+                            [quantity]="qtyProduct"
+                            [smallSize]="false"
+                            (onQtyChange)="qtyProduct = $event">
+                        </shared-quantity-buttons>
                     </div>
                 </div>
 
-                <button class="bg-yellow-500 rounded-md py-2.5 flex justify-center items-center text-black hover:bg-yellow-400"
+                <button class="bg-yellow-500 rounded-md py-2.5 flex justify-center items-center text-black hover:bg-yellow-400 btn-zoom"
                     (click)="addProduct()">
                     <i class="fa-solid fa-cart-plus text-xl"></i>
                     <p class="ml-3">Añadir {{ qtyProduct }} artículos por {{ (qtyProduct * product.price) | currency }}</p>
