Backend changes to JSON Server

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -5,7 +5,7 @@
     [categories]="categories">
   </shared-menu-sidebar>
   
-  <div class="flex-1 overflow-y-auto p-6">
+  <div class="flex-1 overflow-y-auto p-6 scroll-smooth">
     <app-cart *ngIf="sidebarType == 'Cart'"></app-cart>
     
      <app-products
