--- a/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
@@ -19,7 +19,7 @@
         <div class="flex flex-col gap-y-0.5">
             <label>Celular<span class="text-red-600 font-semibold">*</span>:</label>
 
-            <input type="number" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
+            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
                 formControlName="clientTelephone" maxlength="10" placeholder="Celular de 10 dígitos" required/>
 
             <small *ngIf="form.controls['clientTelephone'].touched && (form.controls['clientTelephone'].errors?.['required'] || form.controls['clientTelephone'].errors?.['pattern'])" 
@@ -45,6 +45,12 @@
         </div>
     </div>
 
+    <div class="flex flex-col mt-4 p-4 bg-yellow-50 rounded-md gap-y-3" *ngIf="form.get('deliveryType')?.value === 'recoger'">
+        <h4 class="text-center font-semibold text-lg">Dirección del restaurante</h4>
+
+        <label>Favor de pasar por su pedido a <span class="font-medium">Xochicalco No. 195, Narvarte Poniente, 03020. Narvarte Poniente.</span></label>
+    </div>
+
     <div class="flex flex-col mt-4 p-4 bg-yellow-50 rounded-md gap-y-3" *ngIf="form.get('deliveryType')?.value === 'domicilio'">
         <h4 class="text-center font-semibold text-lg">Dirección de entrega</h4>
 
@@ -53,8 +59,11 @@
         <div class="flex flex-col gap-y-0.5">
             <label>Zona, colonia o super manzana<span class="text-red-600 font-semibold">*</span>:</label>
 
-            <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none"
-                formControlName="neighborhood" placeholder="Zona, colonia o super manzana" maxlength="100" required />
+            <select class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none"
+                formControlName="neighborhood">
+                <option value="">-- Seleccionar colonia --</option>
+                <option *ngFor="let item of neighborhoods" [value]="item.name">{{item.name}}</option>
+            </select>
         </div>
 
         <div class="flex flex-col gap-y-0.5">
@@ -69,14 +78,14 @@
                 <label>Número exterior<span class="text-red-600 font-semibold">*</span>:</label>
 
                 <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
-                    formControlName="exteriorNumber" placeholder="000" maxlength="8" required />
+                    formControlName="exteriorNumber" placeholder="000" maxlength="6" required />
             </div>
 
             <div class="flex flex-col gap-y-0.5">
                 <label>Número interior:</label>
 
                 <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
-                    formControlName="interiorNumber" placeholder="000" maxlength="8" />
+                    formControlName="interiorNumber" placeholder="000" maxlength="6" />
             </div>
         </div>
 
