--- a/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/address-details-page/address-details-page.component.html
@@ -10,7 +10,7 @@
             <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
                 formControlName="clientName" maxlength="100" placeholder="Nombre completo" required />
 
-            <small *ngIf="form.controls['clientName'].touched && form.controls['clientName'].errors?.['required']" 
+            <small *ngIf="form.controls['clientName'].dirty && form.controls['clientName'].errors?.['required']" 
                 class="text-sm text-red-500 italic">
                 *Es necesario llenar este campo
             </small>
@@ -22,7 +22,7 @@
             <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
                 formControlName="clientTelephone" maxlength="10" placeholder="Celular de 10 dígitos" required/>
 
-            <small *ngIf="form.controls['clientTelephone'].touched && (form.controls['clientTelephone'].errors?.['required'] || form.controls['clientTelephone'].errors?.['pattern'])" 
+            <small *ngIf="form.controls['clientTelephone'].dirty && (form.controls['clientTelephone'].errors?.['required'] || form.controls['clientTelephone'].errors?.['pattern'])" 
                 class="text-sm text-red-500 italic">
                 *Es necesario llenar este campo, solo puede contener números y debe tener 10 dígitos
             </small>
@@ -71,6 +71,11 @@
 
             <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none"
                 formControlName="street" placeholder="Nombre de la calle" maxlength="100" required />
+
+            <small *ngIf="form.controls['street'].dirty && form.controls['street'].errors?.['required']" 
+                class="text-sm text-red-500 italic">
+                *Es necesario llenar este campo
+            </small>
         </div>
 
         <div class="grid grid-cols-2 justify-between gap-x-2">
@@ -79,6 +84,11 @@
 
                 <input type="text" class="rounded-md py-1.5 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none" 
                     formControlName="exteriorNumber" placeholder="000" maxlength="6" required />
+
+                <small *ngIf="form.controls['exteriorNumber'].dirty && form.controls['exteriorNumber'].errors?.['required']" 
+                    class="text-sm text-red-500 italic">
+                    *Es necesario llenar este campo
+                </small>
             </div>
 
             <div class="flex flex-col gap-y-0.5">
@@ -91,9 +101,15 @@
 
         <div class="flex flex-col gap-y-0.5">
             <label>Referencias:</label>
+
             <textarea type="text" class="rounded-md py-1.5 h-16 px-2 border-2 border-yellow-200 bg-gray-50 focus:border-2 focus:border-yellow-500 focus:ring-0 focus:outline-none"
                 formControlName="references" maxlength="250">
             </textarea>
+
+            <small *ngIf="form.controls['references'].errors?.['maxLength']" 
+                    class="text-sm text-red-500 italic">
+                    *No se puede exceder de 250 caracteres
+            </small>
         </div>
     </div>
 </form>
