--- a/Frontend/src/app/modules/products/components/product-card/product-card.component.html
+++ b/Frontend/src/app/modules/products/components/product-card/product-card.component.html
@@ -1,10 +1,25 @@
 <div class="flex flex-col flex-auto bg-gray-50 rounded-md w-full h-auto p-0.5 text-gray-900">
     <img class="rounded-t-md h-36" [src]="product.image | imagePipe" />
+
     <div class="flex flex-col p-3.5 gap-y-2">
-        <h3 class="font-semibold text-xl break-all text-center">{{ product.name | cutText:'short' }}</h3>
-        <p class="text-center">{{ product.description | cutText:'medium' }}</p>
+        <div class="relative group">
+            <h3 class="font-semibold text-xl break-all text-center">{{ product.name | cutText:'short' }}</h3>
+
+            <div class="absolute hidden z-10 group-hover:flex -top-8 left-1/2 transform text-white -translate-x-1/2 bg-gray-700 text-sm rounded px-2 py-1 whitespace-nowrap">
+                {{ product.name }}
+            </div>
+        </div>
+        <div class="relative group">
+            <p class="text-center">{{ product.description | cutText:'medium' }}</p>
+            
+            <div class="absolute hidden z-10 group-hover:flex -top-8 left-1/2 transform text-white -translate-x-1/2 bg-gray-700 text-sm rounded px-2 py-1 break-words">
+                {{ product.description }}
+            </div>
+        </div>
+
         <div class="flex flex-wrap mt-2 justify-center items-center md:flex-auto md:justify-between">
             <p class="text-2xl font-bold text-black">{{ product.price | currency }}</p>
+            
             <button class="flex items-center py-1.5 px-2 rounded-lg bg-emerald-700 text-white hover:bg-emerald-900 btn-zoom"
                 (click)="selectedProduct()">
                 <i class="fa-solid fa-cart-plus"></i>
